--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -254,3 +254,5 @@ MP, 2MPが入るところはMP-4HPも入る。MPしか届かない場合はMP-4H
 
 - {端} 6MP(+2), 2LP, 弱ソニック, 2MP, 弱ソニック, 4HP, CR HK, ...
 - {端} 6MP(+2), 2LP, 弱ソニック, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, ...
+
+ガイルは難しいので、慣れるまで妥協コンボの方がいいかも。2MPを2MP-2MPにするとか、ソニックコンボは後回しにするとか。
