--- a/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
@@ -16,6 +16,9 @@
 
 2MK(c), 2MP, ...のカウンター確認が重要。大きなダメージソースになる。
 
+ガイルは弱ソニックを盾に下がりながら、たまに様子見でしゃがんだり、相手が受け身になったところにラッシュしたりするのが基本。
+弾を撃ったらすぐしゃがみは入れておいて、相手の動きをよく見る。撃てるとこではバンバン撃つ。
+
 ## 飛び道具
 
 - 緩急をつける
@@ -25,6 +28,7 @@
 - 見てからジャンプできる距離では弾を撃たない
 - 余裕があったらソニックよりもクロスにする
 - 遠距離で遅い弾を撃ったら前に出る
+- 相手が弾を踏んだら前に出る
 - ブレイドで止めてジャンプを誘うならサマソを溜める
 - 立ちを見てジャンプする相手には、あえて立って通常技で対空する
 
