--- a/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
@@ -24,6 +24,8 @@
 
 忍蜂の後はノーゲージでもある程度強いけど、ゲージに余裕があったら昇竜で締めてラッシュした方がいい。DR 4HKや中下段が強い。
 
+LeShar舞は中央でも4HK重ねてる。弱攻撃から忍蜂よりは高いし、TCからステップ2回で密着+12なら悪くないって判断か。
+
 ## 端の攻め
 
 端では2MPよりも4HKを重ねたい。
