--- a/games/Street-Fighter/Six/system/モダン操作の特徴.md
+++ b/games/Street-Fighter/Six/system/モダン操作の特徴.md
@@ -18,6 +18,9 @@
 
 ODやSAの圏内に入ったらラッシュやジャンプをほぼ抑えられるのがモダンの強み。リーサルの条件が広い。ちなみに暗転返しされないODの方が強い。
 
+モダンはワンボタンの無敵技で守りが強くて、差し合いや火力で劣る場合がある。
+ただ、M豪鬼なんかは致命的な技がなかったりして守りも弱い。カス。
+
 ## 弱み
 
 - コンボが安くなりやすい
