--- a/games/Street-Fighter/Six/theory/リソースの管理.md
+++ b/games/Street-Fighter/Six/theory/リソースの管理.md
@@ -6,36 +6,46 @@
 2. SAゲージ
 3. ドライブゲージ
 
-## 試合運び
-
-BO3で1R目を取られてたら、2R目は早めにSA3を吐きたい。3R目はできるだけリーサルに使う。
-
-## その他
+## 自分の体力
 
 体力が減ると、攻める機会が減る。
 
 体力が減るのに怯えて攻めの機会が減ったら元も子もない。
 
+## 相手の体力
+
 相手の体力が減ってきたら、今あるリソースで倒し切れるコンボを意識する。
+
+## SAゲージ
+
+BO3で1R目を取られてたら、2R目は早めにSA3を吐きたい。3R目はできるだけリーサルに使う。
+
+SAゲージが満タンと空では体力が2000少ないのと同じ。
+勝つにしてもできるだけ温存したいけど、ラウンドを取れるところは確実に取った方がいい。
+
+## ドライブゲージ
+
+ドライブゲージが満タンならまずどんな手順でもいいのでゲージを吐くことを考える。
+ゲージ満タンは本来貯まるはずのゲージを無駄に捨てている状態。
 
 相手がバーンアウトしたからといって、こちらもドライブゲージを使うのは基本的に悪手。相手がバーンアウトから回復すると一転不利になる。
 https://youtube.com/shorts/FzhAXtGBhMI?si=7LXmlZhMdKRDrbdv
 相手と回復のタイミングを合わせるとか、倒し切れるならいいんじゃないかな。
 
-確反（シミーも含む）にはゲージをケチらずに1-3本は使っていい。
+どうせ負けるならゲージを使って暴れた方がいい。
+ゲージを使い切らずに負ける方がもったいない。
+しかし、まだ勝ち目があるなら我慢。
+
+## その他
+
+確反（シミーも含む）にはゲージをケチらずに残り3-4本までは積極的に使っていい。
 コンボの間に1本、SA3まで入れると3本くらいは回収できる。
 ただし、倒しきれないならバーンアウトしないように注意。
 
 コンボやセットプレイの間にゲージを確認できるように、コンボやセットプレイは目を離してもできるようにしたい。
-
-どうせ負けるならゲージを使って暴れた方がいい。
-ゲージを使い切らずに負ける方がもったいない。
-しかし、まだ勝ち目があるなら我慢。
 
 SA1やSA2はダメージも低いし、演出中のドライブゲージの回復も控えめ。
 できればSA3にゲージを回した方が強いけど、SA3が溜まっているとそれ以上SAゲージを溜められない欠点もある。
 
 ダメージを伸ばせるところでは積極的にドライブゲージを使って、使いすぎるとバーンアウトするときだけノーゲージのコンボにする。
 まずはゲージを使ってダメージを伸ばすことを覚える。
-
-SAゲージが満タンと空では体力が2000少ないのと同じ。ただ、ラウンドを取れるところは取った方がいい。
