--- a/games/Street-Fighter/Six/theory/攻めの選択肢.md
+++ b/games/Street-Fighter/Six/theory/攻めの選択肢.md
@@ -62,6 +62,10 @@
 - 遅らせ投げ抜けを崩す
 - 最速打撃よりも強度の高い技を使える場合がある
 
+遅らせ打撃は相手の仕込みを漏らすのが目的なので、相手が仕込んでなかったら意味がない。
+
+遅らせ打撃は別に必須の技術ではない。
+
 ## 遅らせ投げ
 
 - 無敵技をガードする
