--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -350,3 +350,6 @@ https://x.com/ggnka_icha/status/1810274912759918858
 
 尊重というのは、愛の中でも、意思が前提。相手の意思や判断を受け入れる。
 判断が正しいかどうかではなくて、そのような意見があるのを認める。軽く見ない。
+
+今すぐに手に入らなかったとしても、良いものは良いと思った方がいい。
+「すっぱいぶどう」にはしない。
