--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -244,3 +244,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 サンボマスターは横隔膜を上げて、腹筋で息をたくさん使って、息も荒く、仮声帯をガラガラ鳴らす。
 
 声を抑えずにコントロールできるようにしたい。開放的に歌いつつ、抑揚をつける。
+
+叫ぶのではなく、吠えるように歌う。
