--- a/games/Street-Fighter/Six/characters/Mai/舞の対策.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の対策.md
@@ -53,3 +53,7 @@ LK-LK-LKで後ろに跳んだあとは遠いけど-10なので、キャラによ
 モダンは強炎舞, 弱忍蜂のあとAC1のLPが届かないので、起き上がりに後退しておくと攻めにくい。ただ、それも知っている人だと2LK, 2LPにしてくる。
 
 モダン昇竜が弱なので、判定が後ろに下がるジャンプ攻撃とかでうまいこと避けられる場合がある。ザンギのJ.LKとか落としづらい。
+
+舞の扇にパリィはあまり強くない。コパンか空中判定になる技で暴れるか、普通にガードか。
+
+弱忍蜂のあとは後退すると下段の攻めが難しくなる。
