--- a/games/Street-Fighter/Six/practice/練習.md
+++ b/games/Street-Fighter/Six/practice/練習.md
@@ -52,3 +52,5 @@
 例えば、マノンであればMP, cDR 2MP, 4HPとか、4HP, 中ランヴェルセとか。全ての操作の中からではなく、セットの中から選ぶ。
 
 ダイヤ未満で行き詰まったらCPUレベル7戦の勝率を上げるのもいい。どのキャラとも戦えるし、試合の回転が速い。今作のCPUはちゃんと練習になる。まねもんもいい。
+
+対戦でできなかったことがあったらトレモに戻ってやり直す。
