--- a/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
@@ -19,6 +19,12 @@
 ガイルは弱ソニックを盾に下がりながら、たまに様子見でしゃがんだり、相手が受け身になったところにラッシュしたりするのが基本。
 弾を撃ったらすぐしゃがみは入れておいて、相手の動きをよく見る。撃てるとこではバンバン撃つ。
 
+## 距離の調整
+
+近すぎたら2LPや4MK、4HPソニック、などで離す。
+
+ガイルは近距離も強いので、わざわざ後ろに歩いて弾の距離を作らなくていい。なんなら近距離の差し合いで撃ったっていい。ただ、中パンの届く距離はあまり強くない。
+
 ## 飛び道具
 
 - 緩急をつける
@@ -69,6 +75,8 @@ ODブレイドは普通のソニックがODクロスになる。
 中距離のリスクの高いブレイドは減らす。
 
 ODソニックやODクロスはリターンが低いので使わない。
+
+遅いクロスを追いかけるときはJ.MPで落とすとクロスに乗って少しダメージが伸びる。
 
 ## HP
 
