--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -126,3 +126,5 @@ SA3があるなら、BOしても相手も簡単には攻められない。
 受けは再戦に強い。
 
 打撃しか狙ってこないならガードして割り込みだけでもいい。
+
+守りは最速で最速行動に勝てる無敵技暴れや遅らせ投げ抜けか、投げとシミーから逃げられる最速ジャンプか、シミーに勝てるガードしてから発生の早い技やジャンプで割り込むか。
