--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -1,3 +1,10 @@
+## 攻めの方針
+
+攻めはシンプルでいい。
+打撃、投げ、後退の三択。
+
+ただ、面倒なファジー系に対して遅らせ打撃で最大リターンを取るとか、ローリスクハイリターンの攻めが通る相手には持っておくと便利ではある。
+
 ## 攻めの読み合い
 
 まずは相手を崩すために投げとシミーのどちらかで攻めるのが基本。
