--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -22,6 +22,8 @@ https://youtu.be/RitmmhsjDd4?si=YHVYirhlAWKzDYcE
 喉奥の空間が広いとそれだけよく響く。
 特に低い倍音が乗って柔らかく深い声になる。
 
+ただし、喉を狭くした方がコントロールは楽。
+
 ## どうやって喉を下げるのか
 
 舌と喉の筋肉は繋がっている。
