--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -274,3 +274,6 @@ https://youtube.com/watch?v=y7n8JgLoj6Y&si=Jel770KXA5I6wWZl
 投げを抜けるのは基本的にジャンプ。投げ抜けではない。
 
 ガードして+2からコマ投げで暴れるのは強い。
+
+相手の攻めに対して投げ抜けや無敵技で暴れるか、ガードするか、の二択だと、相手は投げとシミーの二択だけで崩せてしまう。
+ここに普通の後ろジャンプ（端では前ジャンプ）を混ぜると相手も打撃を重ねることになって攻めの択が散る。なんなら中央でも相手側にジャンプして、後ろ下がりにめくりを狙ったりしてもいい。
