--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -69,3 +69,9 @@ https://youtube.com/watch?v=SsyijRvm7Qo&si=KBYmrf4gJKDeNvXK
 - [【５分で確認】ドラム基本リズムパターン１０種類（譜面付） - YouTube](https://youtube.com/watch?v=Y-ebU6aNm1Y&si=ZX3nJkvMe8-JftvK)
 
 よふかしのうたはラテン調。6/8が基本。
+
+拍子に対してほんの少しリズムをずらすだけでも人間は感じ取れる。
+一定のリズムの中で少し遅れた音が入ると重く、少し早まった音が入ると軽く聞こえる。ジャズなんかはあえて早く入ってノリを重視することが多い。
+
+ビートの重さの違い。本来のリズムに対して入りが遅いと「重い」という。
+https://youtube.com/shorts/yS5BJeNc4Ag?si=bdOxnJITuJUFaPbD
