--- a/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
@@ -25,6 +25,11 @@
 
 ガイルは近距離も強いので、わざわざ後ろに歩いて弾の距離を作らなくていい。なんなら近距離の差し合いで撃ったっていい。ただ、中パンの届く距離はあまり強くない。
 
+## 差し合いで火力を出す
+
+ソバットや中足のカウンター確認からコンボに行けると一気にダメージが出やすくなる。
+ガイル以外の差し合いキャラも差し合いからダメージを取るのが他のキャラより大事。
+
 ## 飛び道具
 
 - 緩急をつける
