--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -10,6 +10,8 @@
 守る側は攻めのターンを取られた時点で不利なので、ガード、ジャンプ、無敵技、のどれでもいい。
 ただ、上位帯ではまず投げとシミーのどちらかが多いので、ジャンプで逃げるところから始めるのはあり。打撃が増えたら、次からはガードで凌ぎやすくなる。
 
+スト6は真面目に丁寧にやればやるほどインパクトに壊されるゲームなので、しっかりリスクを取って相手の攻めを切りに行く。
+
 ## どう守るか
 
 まずはガードで堅実に凌いで、確反、対空、無敵技暴れで切り返す。
