--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -277,3 +277,5 @@ https://youtube.com/watch?v=y7n8JgLoj6Y&si=Jel770KXA5I6wWZl
 
 相手の攻めに対して投げ抜けや無敵技で暴れるか、ガードするか、の二択だと、相手は投げとシミーの二択だけで崩せてしまう。
 ここに普通の後ろジャンプ（端では前ジャンプ）を混ぜると相手も打撃を重ねることになって攻めの択が散る。なんなら中央でも相手側にジャンプして、後ろ下がりにめくりを狙ったりしてもいい。
+
+最速コパ、無敵技、遅らせ投げ抜け、ガード、だけだと投げとシミーだけでも崩せる。さらに中段とか混ぜられてもしんどい。ここにジャンプを混ぜるだけで相手も打撃を増やしたくなって攻めが散る。
