--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -315,3 +315,5 @@ experienceとpractice自体はもっと一般的な文脈でいいかも。
 思考していると追いつけない状況がわりとある。反射でできるようにしないといけない。それに反射でできることが増えれば思考する余裕もできる。
 
 訓練しないと上手くならないけど、試練しないと強くならない。
+
+ミスった時のリカバリーも含めて練習する。
