--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -190,3 +190,5 @@ https://x.com/acqua_db/status/1902286060316717314
 相手側がよくわかっていなくて、切り返せるところでもガード入れっぱにしているならそのまま攻め継続したっていい。
 
 最速ジャンプと最速無敵技の二択を潰すには、後退から後ろジャンプの着地に長い技を当てる手もある。難しいけど。バクステにされると尚更難しい。
+
+ファジーコパンには普通に投げが入る。
