--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -17,6 +17,9 @@
 攻めるときは相手の守りをよく見る。
 特に、無敵技や投げ抜けの頻度やガードの後にどう暴れるか。
 
+投げと投げ抜け狩りの択が崩しの基本で、削りでBOを狙ったり相手がジャンプしたりするなら打撃を重ねる。まずは投げが通る限り投げる。
+まず相手の凌ぎを崩すことを考えて、相手がリスクをとってくるところで読み勝ってさらに大きなリターンを狙う。
+
 ## 基本の3種
 
 投、打、見の３つが基本。
