--- a/shared/society/個性.md
+++ b/shared/society/個性.md
@@ -21,3 +21,5 @@
 「オリジナリティとは『ハングリー』だ」
 「お前は何に飢えているか？それこそがその人間のオリジナリティなんだ」
 『ブルーロック』
+
+個性というのは正しい技術の上に載るもので、個性の上に独自の技術を載せても上手くいかないことが多い。ただ、それを可能にする天才もごく稀に存在するので、それを信じて結局は諦めるか、改めて基礎から作り直すことになって、長い時間を棒に振る人も多い。
