--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -168,3 +168,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 
 疲れて余裕がなくなると、他人に配慮する余裕もなくなる。
 疲れても他人に優しくできるように、無意識で配慮できるようにする。
+
+畳のふちを踏まないとか、扉の足を踏まないとかも、そういう気遣いを見せること自体が重要。それ自体に意味がなくてもいい。
