--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -1,3 +1,8 @@
+## 2MP(g), CR 2MP(g)
+
+- 前投げ
+- 後歩き: シミー
+
 ## 2HK: 34
 
 ## 2HK(pc): 49
@@ -25,6 +30,11 @@
 
 ## 後投げ: 18
 
+## 空投げ: 21
+
+- {端} 前歩き, 前投げ
+- {端} 前歩き,
+
 ## 弱ソニック(設置): -
 
 ## ODソニック: 48-
@@ -45,8 +55,14 @@
 密着できるのでなんでもできる。
 ステップを挟むのもいい。
 
-- DR HK
-- DR 2MK
+- DR 6MP/2MK: 中下段、目押し
+- DR 前投げ: 目押し
+- ステップ
+  - DR MP, MP
+  - DR 2MK
+  - DR 前投げ
+
+ステップすると
 
 ## 2MP-2MP, 弱/中サマー: 39
 
