--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -10,7 +10,7 @@
 
 ヒットしたら前に出る。
 
-## 中攻撃の練習
+## 中攻撃からSA3
 
 - MP, 2MP, 強サマー, SA3
 
@@ -52,10 +52,9 @@
 
 ## {C} 確反
 
-（確定反撃の練習）
+（反撃設定 > ダウンリバーサル: 無敵技）
 
-- HP(pc), 3HK, 強サマー, SA3, 強ブレイド
-- HP(pc), 4HP/HK, 強SA1, ODサマー
+- {端} HP(pc), 3HK, 強サマー, 3HK, 後退, ..., HP(pc) {BO}, 3HK, 強サマー, 3HK, 前投げ
 
 ## {C} インパクトからのコンボ
 
@@ -135,3 +134,18 @@
     - {その場受け身}, MP, ...
     - {後方受け身, 前方ジャンプ}, 弱サマー
   - ガード
+
+## 端の攻め
+
+（反撃設定 > ダウンリバーサル: 中足 2Fディレイ）
+（反撃設定 > ダウンリバーサル: 通常投げ）
+（反撃設定 > ダウンリバーサル: 何もしない）
+（反撃設定 > ダウンリバーサル: 前方ジャンプ）
+
+- MP, 2MP, 強サマー, 3HK: +4
+  - 前投げ
+    - {前方ジャンプ}, 強サマー
+  - 後歩き, ガード
+    - {前方ジャンプ}, 空投げ, 前歩き, ガード, ...
+    - {通常投げ}, HP, 3HK, 強サマー, ...
+    - {中足}, ガード: 投げが空振りになる位置でしゃがむ
