--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -24,6 +24,8 @@ DR 2MKやDR HKから2MPに繋ぐ。
 
 ガイルは投げの択に行きにくいのが難しい。ある程度余裕がないと投げから対空が出ない。一応、下を入れていても投げは出るので、溜めたまま投げは出せる。DR 前投げがした入れっぱで出せる+15とかなら行ってもいい。
 
+中央サマーの後の起き攻めは弱いのでやらなくていいかも。それならコンボも全部強サマーでいいし。端は3HKからの+4が強い。
+
 ## 攻めの入り
 
 ジャンプ攻撃をガードさせた後はMPで溜めつつヒット確認。
