--- a/games/Street-Fighter/Six/theory/対空.md
+++ b/games/Street-Fighter/Six/theory/対空.md
@@ -24,3 +24,6 @@
 
 差し合いは相手に触られた有利を取られたら負けなので、ジャンプ攻撃をガードさせられた時点で負けている。
 あとパリィで受けるのも何もせずに投げがパニカンになるので読み合いになってしまう。パリィを見せるのはあくまでも無敵のない対空の布石。
+
+対空が弱いキャラは常にジャンプを見てないと間に合わない。
+マリーザ、溜めのないガイル、ディージェイ、など。
