--- a/shared/development/tips/知能.md
+++ b/shared/development/tips/知能.md
@@ -53,3 +53,5 @@
 
 知能が低い人ほど理解できる事象が少ないので、奇跡や神秘として捉えるしかない「何が起きているかわからない」範囲が大きくなる。
 ある人には当たり前のことであっても、知能の低い人は「奇跡だ」と考える。
+
+頭がいい人というのは応用が効くので、得意分野でなくても一通りできる。そうでなければ頭が悪いということだ。
