--- a/shared/entertainment/接待.md
+++ b/shared/entertainment/接待.md
@@ -139,3 +139,5 @@ entertainment は不特定多数を楽しませるもので、その場で一人
 与えないといけない。
 
 ホストは楽しくなくていい。ゲストを楽しませるのが仕事。ゲストを楽しませた上でホストも楽しめるならそれが一番。
+
+接待でも下手に出る必要はない。重要なのは相手を楽しませること。まぁ、人によっては持ち上げられるのが好きって人もいるけど。
