--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -149,6 +149,10 @@
 コマ投げや遅らせ通常投げに最大リターンを狙う。
 ジャンプの欠点に加え、普通に対空されるリスクはあるが、強攻撃をガードさせるだけでも切り返しになる。
 
+## 詐欺飛びの対策
+
+詐欺飛びは何も技を出さないと-1で、下段や投げで崩そうとしてくるなら起き上がり6F目以降になる。1Fだけガードして4F技で暴れられるならほぼ切り返せる。
+
 ## その他
 
 相手に触られた時点で守りに意識を切り替えて、相手の攻めを切らないといけない。
