--- a/shared/collaboration/organization/ディレクター.md
+++ b/shared/collaboration/organization/ディレクター.md
@@ -27,3 +27,5 @@ PM もディレクターではある。
 
 正しい意思決定ができないのにディレクターに据えてはならない。
 意思決定の質を評価して、ダメならクビにしなければならない。
+
+ディレクターは余計な口出しをせずに仕事を任せて、問題が起きたら支援するのが仕事。ディレクターが忙しいのはやり方を間違えている。
