--- a/shared/communication/frameworks/negotiation/交渉を破棄する.md
+++ b/shared/communication/frameworks/negotiation/交渉を破棄する.md
@@ -2,3 +2,6 @@
 
 どこで交渉を破棄するのか決めておいて、下回った時点で交渉せずに破棄しよう。
 低めに提示して値切ろうとしてくるのは許さない。
+
+営利目的で動かない人間には交渉が通じない。
+そもそも交渉というのは利益を天秤にかけるもので、天秤を持ってない人間とは交渉できない。
