--- a/shared/communication/media/language/言葉にする.md
+++ b/shared/communication/media/language/言葉にする.md
@@ -28,3 +28,5 @@ https://youtu.be/8FHo4BKf8hk?si=H7tmy8LWTURy3Ger
 
 意見の言語化はあまり重要ではない。
 対象、事象の言語化と、根拠の言語化が大事。
+
+娯楽とか感覚的なところは別に言語化しなくてもいいけど、誰かに話すときは不便。
