--- a/shared/society/leadership/リーダー.md
+++ b/shared/society/leadership/リーダー.md
@@ -82,3 +82,5 @@ https://x.com/coffee_nomimasu/status/1832985764860399885
 上に立つだけのボスは下を導かない。支配して、搾取する。
 
 先頭に出ないとリーダーとは言えない。
+
+リーダーの重要な役割は決めること。まず先頭を歩くのがリーダー。ディレクターの一種。ディレクターでも指示するだけで先頭を歩かないならリーダーとは言えない。
