--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -12,6 +12,10 @@
 
 スト6は真面目に丁寧にやればやるほどインパクトに壊されるゲームなので、しっかりリスクを取って相手の攻めを切りに行く。
 
+## 割り切って投げを受け入れる
+
+特にわからない攻めでは、ガードから割り込むのも難しい。その場合、割り切って中下段だけ見て、投げを受け入れて、ガードに徹するのはあり。端以外で投げから投げを狙えるキャラはあまりいない。
+
 ## どう守るか
 
 まずはガードで堅実に凌いで、確反、対空、無敵技暴れで切り返す。
