--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -242,3 +242,7 @@ https://youtu.be/wADwhMypI1g?si=tCLbJvOx2dK33cYP
 
 引きつったような「ひっ」を何度も繰り返すのも息の圧を維持する練習になる。強くて高い音が鳴る方がうまくできている。
 https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
+
+強い息を一瞬しか維持できないと、喉で絞るしかない。
+
+息の圧を高めるときは息を止める感覚。それだけで声は出ない。息の圧を高めた上で、腹筋で少しだけ息を送る。
