--- a/shared/employment/従業員.md
+++ b/shared/employment/従業員.md
@@ -1,8 +1,10 @@
 従者
 
-雇用されて業務に勤しむ人。
+雇用されて業務に従事する人。
 
 社員というと正社員を指すことがあるので、企業に直接関わっている人としては従業員と言ってもいいかも。
 
 従者として人生を主人に捧げるなら待つのもその一環。
 自分のためではなく、主人の時間と対応させる。
+
+客よりも従業員を大事にする。
