--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -246,3 +246,7 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 声を抑えずにコントロールできるようにしたい。開放的に歌いつつ、抑揚をつける。
 
 叫ぶのではなく、吠えるように歌う。
+
+結局内側の腹筋が弱いと息を持ち上げられないので、息が吐けない。息の支えに対抗できない。まず息を吐く方を鍛える。
+
+閉じた声帯を少しだけ広げるように声を出す。声帯を閉じるように声を出すと喉が締まる。
