--- a/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
@@ -32,6 +32,7 @@
 
 ## 飛び道具
 
+- 安全ソニックの距離を作る
 - 緩急をつける
 - たまにラッシュを混ぜる
 - 近距離であえて弾を撃つ
@@ -82,6 +83,13 @@ ODブレイドは普通のソニックがODクロスになる。
 ODソニックやODクロスはリターンが低いので使わない。
 
 遅いクロスを追いかけるときはJ.MPで落とすとクロスに乗って少しダメージが伸びる。
+
+## 安全ソニック
+
+弱ソニックをガードしてからジャンプしても次のソニックからのサマーが間に合う距離がガイルの一番強い距離。トレモでいうと25くらい。ちょうどインパクトがほぼ届かない距離でもある。あえてそれ以上離れる意味はない。特に画面端。で、サマーで落としたらラッシュとかで起き攻め。
+このように飛ばれても対空が間に合うソニックを安全ソニックという。
+
+安全ソニックは回転が速い。相手がガードしたのを見たら次のソニックを撃っていい。
 
 ## HP
 
