--- a/shared/information/情報.md
+++ b/shared/information/情報.md
@@ -174,3 +174,5 @@ communication, decision, observation あたりは関連がある。
 情報は、リスクや成功の文脈と近い。
 
 いつ役に立つのかわからない情報は集めておく。
+
+情報は手段でしかない。重要なのは情報を使ってリスクを下げること。成功率や利益率を上げること。
