--- a/shared/lifestyle/housing/賃貸.md
+++ b/shared/lifestyle/housing/賃貸.md
@@ -34,3 +34,5 @@ https://www.juutakuseisaku.metro.tokyo.lg.jp/juutaku_seisaku/tintai/310-9-jyuuta
 水道代はあんまり変わらない。
 
 賃貸は普通一年は住む想定。基本は二年以上。
+
+家賃が勝手に上げられた場合、退去せずに、無視して当初の家賃を払い続ける手もある。
