--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -53,3 +53,5 @@ https://note.com/atano/n/n3c01c44d8bae
 女性曲の1オクターブ下は最低音がG2くらいになってしまうので、男性でもさすがに低すぎる。
 
 キーが変わると違うメロディに聞こえる人と、そうでない人がいる。
+
+明るい曲は-6で歌っても伴奏は+6にした方が合うときがある。
