--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -134,3 +134,5 @@ SA3があるなら、BOしても相手も簡単には攻められない。
 打撃しか狙ってこないならガードして割り込みだけでもいい。
 
 守りは最速で最速行動に勝てる無敵技暴れや遅らせ投げ抜けか、投げとシミーから逃げられる最速ジャンプか、シミーに勝てるガードしてから発生の早い技やジャンプで割り込むか。
+
+ガードして不利になる技は覚えないといけない。発生が遅い場合は止めたいし、止められなかった場合暴れてはいけない。
