--- a/shared/management/performance/疲労.md
+++ b/shared/management/performance/疲労.md
@@ -21,3 +21,6 @@
 睡眠などの休息によって負債を返す。
 
 寝不足や疲れでパフォーマンスが落ちたまま仕事をするのは酒を飲んで仕事をするのと変わらない。
+
+頭が動かないときは体を動かすといい。頭が動くうちに、どうやって体を動かすか決めておく。
+体が動かないときは頭も動かない時が多い。寝る。
