--- a/games/shogi/将棋.md
+++ b/games/shogi/将棋.md
@@ -7,3 +7,5 @@ AIの将棋はもはや薄い囲いから先に入玉してそのまま押しつ
   - 駒を詰ませる
   - 両取りをかける
   - 詰めろXXX取りをかける
+
+将棋では、駒を切っていいかどうか判断するために、相手に渡していいかどうかも考える。詰みや守りに必要かどうかだけでは足りない。相手の攻めや守りも考える。
