--- a/shared/engagement/誇り.md
+++ b/shared/engagement/誇り.md
@@ -89,3 +89,6 @@
 プライドのために執着を捨てられないといけない。
 
 正しい誇りを持つべきだ。
+
+サッカーのサポーターのように、チームが勝つことが自分の誇りでもある状態がエンゲージメント。チームが勝つために自ら率先してボランティアを買って出ることもある。
+エンゲージメントにビジネスの関係が加わった場合、まずビジネスが十分に成功していることが誇りにつながる。売り上げを上げて、世間に知られて、社員に高い給料を払わなければならない。
