--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -105,3 +105,8 @@ Lose-WinをLose-Loseに持ち込む。
 戦争は競合を解消する手段。あるいは競合している状態そのもの。
 
 戦場で最初に学ぶべきなのは、戦い方ではなく、生き残り方。
+
+戦いは楽しい。
+学んだことを生かす実戦の場だ。
+
+争いが嫌いでも戦いが好きな人はいる。
