--- a/shared/human/being/well/幸福.md
+++ b/shared/human/being/well/幸福.md
@@ -255,3 +255,5 @@ https://www.sustainability-hub.jp/column/about-personal-relationships/
 主観的な満足だけを幸福とするか、客観的な要素を考慮するべきか。
 
 個人で年俸1000万円を超えるような高所得帯になると給料が上がっても幸福度は増えないが、それまでは給料を上げると幸福度はぐんぐん上がる。
+
+人それぞれの幸福がある。
