--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
@@ -1,8 +1,5 @@
 ## 概要
 
-ダメージは酔2で記載する。
-現在編集中。
-
 端ではOD疾歩に繋ぐのが強い。
 
 弱流酔拳は1段目がヒットしても2段目が当たらないこともあるゴミ技なのでできるだけ使わないようにコンボを組んだ方がいい。
@@ -145,6 +142,8 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 - (端) OD酔疾歩(pc), 2HP, OD酔疾歩, 強張弓腿: 3285
 - (端) OD酔疾歩(pc), 2HP, 中酔疾歩, SA3, 強酔疾歩: 4018
 - (端) OD酔疾歩(pc), 2HP, 中酔疾歩, SA3, OD酔疾歩, 強張弓腿: 4193
+- (端) OD酔疾歩(pc), 2HP, SA3, OD酔疾歩, 強張弓腿: 4472
+- (端) OD酔疾歩(pc), 2HP, SA3, OD酔疾歩, DR 2HP, OD酔疾歩, 強張弓腿: 4690
 
 ## (酔1) 無影蹴
 
@@ -169,6 +168,7 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 - DI(pc), 2HP, 強流酔拳-KK: 2204
 - DI(pc), 2HP, 強酔疾歩: 2264
 - {C|酔2} DI(pc), 2HP, 強爆廻: 2940-3231
+- {端} DI(pc), 2HP, OD酔疾歩, 強昇竜: 2961
 - DI(pc), 2HP, 強酔疾歩, SA3, 強酔疾歩: 3892/3820
 - {端} DI(pc), 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 4054
 - {C|酔2} DI(pc), 2HP, 強爆廻, SA3, 強疾歩: 4600-5056
