表記の修正

--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
@@ -2,7 +2,7 @@
 
 端ではOD疾歩に繋ぐのが強い。
 
-弱流酔拳は1段目がヒットしても2段目が当たらないこともあるゴミ技なのでできるだけ使わないようにコンボを組んだ方がいい。
+弱酔拳は1段目がヒットしても2段目が当たらないこともあるゴミ技なのでできるだけ使わないようにコンボを組んだ方がいい。
 
 ジェイミーのSA3は早めに出して追撃を伸ばした方が強い。
 補正がかかる前に使うのでできればコマンド入力したいところ。
@@ -10,42 +10,42 @@
 ## 確反
 
 HK(pc), ステップ, 2HPルートが基本。
-端でOD酔疾歩が入るなら使った方がいい。
+端でOD疾歩が入るなら使った方がいい。
 
 ## (酔1) LP
 
-- (酔1) LP-LK-MP, 弱酔疾歩: 1280
-- (酔1) LP-LK-MP, 弱張弓腿: 1337
-- (酔1) LP-LK-MP, 強張弓腿: 1565/1397
-- (酔1) LP-LK-MP, cDR 2LP, 2HP, 強酔疾歩: 1631
-- (酔1) LP-LK-MP, 弱酔疾歩, SA3, 強酔疾歩: 2808
+- (酔1) LP-LK-MP, 弱疾歩: 1280
+- (酔1) LP-LK-MP, 弱昇竜: 1337
+- (酔1) LP-LK-MP, 強昇竜: 1565/1397
+- (酔1) LP-LK-MP, cDR 2LP, 2HP, 強疾歩: 1631
+- (酔1) LP-LK-MP, 弱疾歩, SA3, 強疾歩: 2808
 
 ## 2LP/2LK
 
-- 2LK, 2LP, 弱流酔拳-KK: 964(AC1)
+- 2LK, 2LP, 弱酔拳-KK: 964(AC1)
 
 ## (酔1) 2LP
 
-- (酔1) 2LP 1-2, LP-LK-MP, 中流酔拳-KK: 1305/1273
-- (酔1) 2LP 1-2, LP-LK-MP, 中流酔拳-PP: 1352
-- (酔1) 2LP 1-2, LP-LK-MP, 弱張弓腿: 1354
-- (酔1) 2LP 1-2, LP-LK-MP, 弱酔疾歩, SA3, 強酔疾歩: 2700
+- (酔1) 2LP 1-2, LP-LK-MP, 中酔拳-KK: 1305/1273
+- (酔1) 2LP 1-2, LP-LK-MP, 中酔拳-PP: 1352
+- (酔1) 2LP 1-2, LP-LK-MP, 弱昇竜: 1354
+- (酔1) 2LP 1-2, LP-LK-MP, 弱疾歩, SA3, 強疾歩: 2700
 
 ## (酔1) MP/MP(相打ち)
 
-- (酔1) MP, LP-LK-MP, 弱流酔拳-KK: 1824
-- (酔1) MP, LP-LK-MP, 弱流酔拳-PP: 1848
-- (酔1) MP, LP-LK-MP, 弱張弓腿: 1907
-- (酔1) MP, LP-LK-MP, 強張弓腿: 2135
-- (酔1) MP, LP-LK-MP, 弱酔疾歩, SA3, 強酔疾歩: 3378/3330
+- (酔1) MP, LP-LK-MP, 弱酔拳-KK: 1824
+- (酔1) MP, LP-LK-MP, 弱酔拳-PP: 1848
+- (酔1) MP, LP-LK-MP, 弱昇竜: 1907
+- (酔1) MP, LP-LK-MP, 強昇竜: 2135
+- (酔1) MP, LP-LK-MP, 弱疾歩, SA3, 強疾歩: 3378/3330
 
 ## (酔4) MP
 
-- MP, LP-LK-MP, 弱張弓腿: 2211
-- MP, LP-LK-MP, 弱酔疾歩-P: 2640
-- MP, LP-LK-MP, 弱酔疾歩-P, SA3, 強酔疾歩-P: 4108
-- MP, LP-LK-MP, 弱酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4132
-- MP, LP-LK-MP, 弱酔疾歩-P, SA3, OD酔疾歩, 強張弓腿: 4140
+- MP, LP-LK-MP, 弱昇竜: 2211
+- MP, LP-LK-MP, 弱疾歩-P: 2640
+- MP, LP-LK-MP, 弱疾歩-P, SA3, 強疾歩-P: 4108
+- MP, LP-LK-MP, 弱疾歩-P, SA3, OD疾歩, 2HK-酒: 4132
+- MP, LP-LK-MP, 弱疾歩-P, SA3, OD疾歩, 強昇竜: 4140
 
 ## MP(pc)
 
@@ -55,74 +55,72 @@ HK(pc), ステップ, 2HPルートが基本。
 
 ガードされても連続ガードになる。
 
-- MK, cDR 2LP 1-2, LP, 弱流酔拳-KK: 1428
+- MK, cDR 2LP 1-2, LP, 弱酔拳-KK: 1428
 
 ## (酔1) MK, cDR 2LP
 
-- MK, cDR 2LP 1-2, LP-LK-MP, 弱張弓腿: 1714
-- MK, cDR 2LP 1-2, LP-LK-MP, 強張弓腿: 1842
+- MK, cDR 2LP 1-2, LP-LK-MP, 弱昇竜: 1714
+- MK, cDR 2LP 1-2, LP-LK-MP, 強昇竜: 1842
 
 ## MK, cDR MP
 
-- MK, cDR MP, 2HP, 強流酔拳-KK: 2127
-- MK, cDR MP, 2HP, 強酔疾歩: 2181
-- (端) MK, cDR MP, 2HP, OD酔疾歩, 強張弓腿: 2914
-- (端) MK, cDR MP, 2HP, OD酔疾歩, SA1: 3077
-- MK, cDR MP, 2HP, 強酔疾歩, SA3, 強酔疾歩: 3697
+- MK, cDR MP, 2HP, 強酔拳-KK: 2127
+- MK, cDR MP, 2HP, 強疾歩: 2181
+- (端) MK, cDR MP, 2HP, OD疾歩, 強昇竜: 2914
+- (端) MK, cDR MP, 2HP, OD疾歩, SA1: 3077
+- MK, cDR MP, 2HP, 強疾歩, SA3, 強疾歩: 3697
 
 ## (酔4) MK, cDR MP
 
-MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
+MK, cDR MP, 2HP, 強疾歩-P, SA3, OD疾歩, 2HK-酒: 4713
 
 ## 6MK(pc)
 
-- 6MK(pc), 2LP 1-2, 弱流酔拳-KK: 1610
-
-## (酔1) 6MK(pc)
-
-- 6MK(pc), LP-LK-MP, 中流酔拳-KK:
-- 6MK(pc), LP-LK-MP, 弱張弓腿:
-- 6MK(pc), LP-LK-MP, 強張弓腿:
-- 6MK(pc), LP-LK-MP, 弱酔疾歩, SA3, 強酔疾歩:
+- 6MK(pc), 2LP 1-2, 弱酔拳-KK: 1610
+- {酔1} 6MK(pc), LP-LK-MP, 中酔拳-P-P: 2095
+- {酔1} 6MK(pc), LP-LK-MP, 強昇竜: 2249
+- {酔1} 6MK(pc), LP-LK-MP, 弱疾歩, SA3, 強疾歩: 3492
+- {酔1} 6MK(pc), LP-LK-MP, 弱疾歩, SA3, OD疾歩, 強昇竜: 3599
+- {酔1} 6MK(pc), LP-LK-MP, 弱疾歩, SA3, OD疾歩, DR 2HP, OD疾歩, 強昇竜: 3745
 
 ## HP(pc)
 
-- HP(pc), LP, 弱流酔拳-KK: 1894
+- HP(pc), LP, 弱酔拳-KK: 1894
 
 ## (酔1) HP(pc)
 
-- (酔1) HP(pc), LP-LK-MP, 弱流酔拳-KK: 2280
-- (酔1) HP(pc), LP-LK-MP, 弱酔疾歩: 2306
-- (酔1) HP(pc), LP-LK-MP, 弱酔疾歩, SA3, 強酔疾歩: 3786
+- (酔1) HP(pc), LP-LK-MP, 弱酔拳-KK: 2280
+- (酔1) HP(pc), LP-LK-MP, 弱疾歩: 2306
+- (酔1) HP(pc), LP-LK-MP, 弱疾歩, SA3, 強疾歩: 3786
 
 ## HK(pc)
 
 - (端) HK(pc), HK, 強酔拳-P-P: 2542-3305
-- HK(pc), ステップ, 2HP, 強酔疾歩: 2820
-- HK(pc), ステップ, 2HP, 強張弓腿: 2980
+- HK(pc), ステップ, 2HP, 強疾歩: 2820
+- HK(pc), ステップ, 2HP, 強昇竜: 2980
 - (酔2) HK(pc), ステップ, 2HP, 強爆廻: 3300
-- (端) HK(pc), ステップ, 2HP, OD酔疾歩, 2HK-酒: 3600
-- (端) HK(pc), ステップ, 2HP, OD酔疾歩, 強張弓腿: 3720
-- HK(pc), ステップ, 2HP, 強酔疾歩, SA3, 強酔疾歩: 4860
-- (端) HK(pc), ステップ, 2HP, 強酔疾歩, SA3, OD酔疾歩, 強張弓腿: 5240
-- (端) HK(pc), ステップ, 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 5160
+- (端) HK(pc), ステップ, 2HP, OD疾歩, 2HK-酒: 3600
+- (端) HK(pc), ステップ, 2HP, OD疾歩, 強昇竜: 3720
+- HK(pc), ステップ, 2HP, 強疾歩, SA3, 強疾歩: 4860
+- (端) HK(pc), ステップ, 2HP, 強疾歩, SA3, OD疾歩, 強昇竜: 5240
+- (端) HK(pc), ステップ, 2HP, 強疾歩, SA3, OD疾歩, 2HK-酒: 5160
 
 ## (酔4) 6HK
 
-- (酔4) 6HK-頭突き, 流酔拳
+- (酔4) 6HK-頭突き, 酔拳
 
 ## DR HP
 
-- DR HP, 2LP 1-2, 弱流酔拳-K-K: 1772
-- DR HP, LP, 弱張弓腿: 1800
-- DR HP, LP, 強張弓腿: 2088/1878
+- DR HP, 2LP 1-2, 弱酔拳-K-K: 1772
+- DR HP, LP, 弱昇竜: 1800
+- DR HP, LP, 強昇竜: 2088/1878
 
 ## (酔1) DR HP
 
-- DR HP, LP-LK-MP, 弱張弓腿: 2192
-- DR HP, 2LP, LP-LK-MP, 弱張弓腿: 2207
-- DR HP, 2LP, LP-LK-MP, 強張弓腿: 2395
-- DR HP, LP-LK-MP, 強張弓腿: 2420/2252
+- DR HP, LP-LK-MP, 弱昇竜: 2192
+- DR HP, 2LP, LP-LK-MP, 弱昇竜: 2207
+- DR HP, 2LP, LP-LK-MP, 強昇竜: 2395
+- DR HP, LP-LK-MP, 強昇竜: 2420/2252
 - (端) DR HP, LP-LK-MP, cDR MP, 2HP, OD疾歩, SA1: 3281
 
 ## {C} J.HK
@@ -131,19 +129,19 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 
 ## (酔3) 点辰
 
-- (酔3) 点辰, MP, LP-LK-MP, 弱張弓腿: 1443
-- (酔3) 点辰, MP, LP-LK-MP, 強張弓腿: 1567
-- (酔3) 点辰, MP, LP-LK-MP, 弱酔疾歩, SA3, 強酔疾歩: 2808
-- (酔3) 点辰, MP, LP-LK-MP, 弱酔疾歩, SA3, OD酔疾歩, 強張弓腿: 2912
+- (酔3) 点辰, MP, LP-LK-MP, 弱昇竜: 1443
+- (酔3) 点辰, MP, LP-LK-MP, 強昇竜: 1567
+- (酔3) 点辰, MP, LP-LK-MP, 弱疾歩, SA3, 強疾歩: 2808
+- (酔3) 点辰, MP, LP-LK-MP, 弱疾歩, SA3, OD疾歩, 強昇竜: 2912
 
-## (端) OD酔疾歩(pc)
+## (端) OD疾歩(pc)
 
-- (端) OD酔疾歩(pc), 2HP, 中酔疾歩: 2466
-- (端) OD酔疾歩(pc), 2HP, OD酔疾歩, 強張弓腿: 3285
-- (端) OD酔疾歩(pc), 2HP, 中酔疾歩, SA3, 強酔疾歩: 4018
-- (端) OD酔疾歩(pc), 2HP, 中酔疾歩, SA3, OD酔疾歩, 強張弓腿: 4193
-- (端) OD酔疾歩(pc), 2HP, SA3, OD酔疾歩, 強張弓腿: 4472
-- (端) OD酔疾歩(pc), 2HP, SA3, OD酔疾歩, DR 2HP, OD酔疾歩, 強張弓腿: 4690
+- (端) OD疾歩(pc), 2HP, 中疾歩: 2466
+- (端) OD疾歩(pc), 2HP, OD疾歩, 強昇竜: 3285
+- (端) OD疾歩(pc), 2HP, 中疾歩, SA3, 強疾歩: 4018
+- (端) OD疾歩(pc), 2HP, 中疾歩, SA3, OD疾歩, 強昇竜: 4193
+- (端) OD疾歩(pc), 2HP, SA3, OD疾歩, 強昇竜: 4472
+- (端) OD疾歩(pc), 2HP, SA3, OD疾歩, DR 2HP, OD疾歩, 強昇竜: 4690
 
 ## (酔1) 無影蹴
 
@@ -153,23 +151,23 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 
 ## (酔1) OD無影蹴
 
-- (酔1) OD無影蹴, 強張弓腿: 1448
+- (酔1) OD無影蹴, 強昇竜: 1448
 - (酔1) OD無影蹴, SA1: 1883
 - (酔1) OD無影蹴, SA3: 2708
-- (酔1) OD無影蹴, 中酔疾歩, SA3, 強酔疾歩: 3028
+- (酔1) OD無影蹴, 中疾歩, SA3, 強疾歩: 3028
 
 ## DI(壁)
 
-- DI(壁), 2HP, OD酔疾歩, 2HK-酒: 2718
-- DI(壁), 2HP, OD酔疾歩, 強張弓腿: 2817
+- DI(壁), 2HP, OD疾歩, 2HK-酒: 2718
+- DI(壁), 2HP, OD疾歩, 強昇竜: 2817
 
 ## DI(pc)
 
-- DI(pc), 2HP, 強流酔拳-KK: 2204
-- DI(pc), 2HP, 強酔疾歩: 2264
+- DI(pc), 2HP, 強酔拳-KK: 2204
+- DI(pc), 2HP, 強疾歩: 2264
 - {C|酔2} DI(pc), 2HP, 強爆廻: 2940-3231
-- {端} DI(pc), 2HP, OD酔疾歩, 強昇竜: 2961
-- DI(pc), 2HP, 強酔疾歩, SA3, 強酔疾歩: 3892/3820
-- {端} DI(pc), 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 4054
+- {端} DI(pc), 2HP, OD疾歩, 強昇竜: 2961
+- DI(pc), 2HP, 強疾歩, SA3, 強疾歩: 3892/3820
+- {端} DI(pc), 2HP, 強疾歩, SA3, OD疾歩, 2HK-酒: 4054
 - {C|酔2} DI(pc), 2HP, 強爆廻, SA3, 強疾歩: 4600-5056
 - (C|端|酔2) DI(pc), 2HP, 強爆廻, SA3, OD疾歩, DR 2MP, OD疾歩, DR 2MP, 強爆廻: 4952-5443
