--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーの攻めの状況.md
@@ -6,7 +6,7 @@
 ## HP: 1
 
 ヒットしたら密着1になる。
-2LP, LPからヒット確認してLP-LP-LP, 弱張弓腿が基本。
+2LP, LPからヒット確認してLP-LP-LP, 弱昇竜が基本。
 
 - 2LP, LP: ヒット確認から弱コンボ
 
@@ -36,14 +36,14 @@
 端ではステップから前投げが重なるけど、前歩きから攻めた方が強い。
 
 - (端) ステップ, 前投げ
-- (端) 前歩き, 2LK, 2LP, 張弓腿
+- (端) 前歩き, 2LK, 2LP, 昇竜
 - (端) 前歩き, 前投げ
 - (端) 6MK(+2)
 - (端) 酔疾歩
 
 中央ではDR HPが後方受け身にも重なる。
 
-- DR HP(+1), 2MK, 張弓腿
+- DR HP(+1), 2MK, 昇竜
 
 中足昇竜が難しかったら中流酔拳や弱酔疾歩でもいい。
 
@@ -58,17 +58,17 @@
 - (端) DR 前投げ
 - (端) DR
 
-## 弱張弓腿: 42
+## 弱昇竜: 42
 
 端では詐欺飛びを狙える。
 中央でもステップ2回で密着4になる。
 
-6MK, 2LK, 2LP, 弱張弓腿のように遠めで当たると43になることがある。
+6MK, 2LK, 2LP, 弱昇竜のように遠めで当たると43になることがある。
 
 - (端) J.HP
 - (端) J, ガード, 前投げ
 
-## 強張弓腿: 39
+## 強昇竜: 39
 
 - ステップ, DR MP(+2): ガードされて8
 - (端) HP: 5
