--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーの攻めの状況.md
@@ -91,8 +91,6 @@
 - (端) J.HP
 - (端) J, ガード, 前投げ
 
-## SA3, 強酔疾歩: 40
-
 ## HK(pc), HK, OD酔疾歩
 
 ## OD酔疾歩: 73
@@ -108,9 +106,19 @@
 
 主にAC2から。
 
+## 弱爆廻: 42
+
+## 中爆廻: 35
+
+## 強爆廻: 34
+
+## OD爆廻: 12
+
 ## 無影蹴: 43-52
 
 基本的には密着の低空で当てると43になる。
 足元に当てると52になる。
 
 ## SA1: 12
+
+## SA3, 強酔疾歩: 40
