--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -1,63 +1,163 @@
+# Combos
+
 ## 確反
 
 ### 6F
 
 MK始動。
+密着ならMK, 2HP, 強スピンルートが高い。なんならMPやHPのルートより高い。
+
+### 8F
+
+MP, MK-HKが火力を出しやすい。シミーとかこっち。
+
+### 12F以上
+
+パニカンとか関係なく単純にHP-HPから。昇竜やSAはこっち。
 
 ## 必殺技キャンセルできる技
 
 - LP
+- 2LP
 - LK
 - MP-MP
 - 2MP
 - MK
+- MK-HK
+- {立} 2MK-HK
+- 2HP: 強制立たせ
 
-## その他
+## 2LP
 
 - 2LP, 2LP, 弱スピン: 1170
 - 2LP, 2LP, 強昇竜: 1520
+
+## {立} MP-MP
+
+## MK
+
+- MK-HK, 強ホーン
+- MK-HK, 強昇竜
+- MK-HK, ODスピン-リンクMK, 弱ホーン, SA3: 4710 (AC3)
+
+## MK(+4)
+
+- MK(+4), 2HP, 強スピン, 中ホーン: 2980
+- {端} MK(+4), 2HP, 強スピン; 強昇竜: 3100 (最速で繋ぐと2800)
+- MK(+4), 2HP, ODホーン, 強昇竜: 3100
+- MK(+4), 2HP, 強スピン, SA2: 4040
+- MK(+4), 2HP, 強ホーン, SA3: 4340
+- {端} MK(+4), 2HP, 強スピン, 中ホーン, SA3: 4980
+
+## MK(+7)
+
++19からDR MKを重ねるか、DR MK(pc)か。
+
+- MK(+7), HP-HP, 強昇竜: 2920
+
+## 2MK
+
+- 2MK, 2LP, 弱スピン: 1470
+- 2MK, 2LP, 強昇竜: 1820
+
+## {立} 2MK-HK
+
+- 2MK-HK, 強昇竜: 1900
+- 2MK-HK, 強ホーン: 1830
+- 2MK-HK, 中スピン: 1620
+- {端} 2MK-HK, ODホーン, 強昇竜: 2460
+- {端} 2MK-HK, ODホーン, OD昇竜: 2560
+- 2MK-HK, SA2: 2880
+- 2MK-HK, ODホーン, SA2: 3160
+- 2MK-HK, 強ホーン, SA3: 3830
+
+## 2MK(+2)
+
+- 2MK(+2), MK-HK, 強昇竜: 2120
+- 2MK(+2), MK-HK, 強ホーン: 2060
+- 2MK(+2), MK-HK, ODホーン, 強昇竜: 2320
+
+MKは近くないと当たらない。
+
+## 2MK(+4)
+
+- {立} 2MK(+4), MP-MP, 強昇竜: 2200
+
+## 6MK(+4)
+
+- 6MK(+4), MK-HK, 強昇竜: 2400
+- 6MK(+4), MK-HK, ODスピン-リンク-MK, 強昇竜: 3050
+- 6MK(+4), MK-HK, ODスピン-リンク-MK, 中ホーン, SA3: 4970
+
+## HP
+
+- HP-HP, 強昇竜: 2720
+- HP-HP, OD昇竜: 2880
+- HP-HP, SA2: 3840
+- HP-HP, SA2(H): 3160
+
+## HP(pc)
+
+- HP(pc)-HP, 強ホーン: 2800
+- HP(pc)-HP, 強昇竜: 2880
+- HP(pc)-HP, DR 2HP, 強スピン, 強ホーン: 3558
+- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, 強昇竜: 3934
+- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, 強昇竜: 3996
+- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, OD昇竜: 4028
+- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, SA1, 強昇竜: 4348
+- HP(pc)-HP, DR 2HP, 強スピン, SA2: 4188
+- HP(pc)-HP, ODスピン, SA2: 4240
+- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, SA2: 5020
+- HP(pc)-HP, 強ホーン, SA3: 4800
+- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, SA3: 5558
+- {端} HP(pc)-HP, ODスピン, 弱ホーン, SA3: 5220
+
+## 強スピン(pc)
+
+- 強スピン(pc)-リンク-MK, 強昇竜: 3380
+- {端} 強スピン(pc)-リンク-MK, 弱ホーン, 弱昇竜: 3740
+- 強スピン(pc)-リンク-MK, SA1, 強昇竜: 4220
+- 強スピン(pc)-リンク-MK, SA1, OD昇竜: 4320
+- 強スピン(pc)-リンク-MK, 中ホーン, SA3: 5220
+- {端} 強スピン(pc)-リンク-LK, DR 2LP, 中スピン-リンク-MK, 弱ホーン, 弱昇竜: 4093
+- {端} 強スピン(pc)-リンク-LK, DR 2LP, 中スピン-リンク-MK, 弱ホーン, SA3: 5843
+
+## リンクS-HK
+
+弾抜けなどから狙う。
+
+- リンクS-HK, 2LP, 弱スピン: 1870
+
+## DI(pc)
+
+- DI(pc), ステップ, 2MP, 中スピン-リンク-MK; 強昇竜: 3340 (最速だと3090)
+- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン: 3240
+- {端} DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3550
+- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3640
+- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン, SA3: 5240
+
+## DI(壁)
+
+- DI(壁), 2MP, 中スピン-リンク-MK, 強昇竜: 3180
+- DI(壁), 2MP, 中スピン-リンク-MK, SA1, 昇竜: 3480
+- DI(壁), 2MP, 中スピン-リンク-MK, SA1, 昇竜: 3480
+
+## その他
 
 - 2LP(+4), 2HP, 強ホーン: 1850
 
 - 2LK, 2LP, 弱スピン: 1070
 - 2LK, 2LP, 強昇竜: 1420 (AC1)
 
-- 2MK, 2LP, 弱スピン: 1470
-- 2MK, 2LP, 強昇竜: 1820
-- {立} 2MK-HK, 強昇竜: 1900
-- {立} 2MK-HK, 強ホーン: 1830
-- {立} 2MK-HK, 中スピン: 1620
-- {立端} 2MK-HK, ODホーン, 強昇竜: 2460
-- {立端} 2MK-HK, ODホーン, OD昇竜: 2560
-- {立端} 2MK-HK, ODスピン, 強昇竜: 2070
-- {立端} 2MK-HK, ODスピン, OD昇竜: 2420
-
-- HP-HP, 強昇竜: 2720
-- HP-HP, OD昇竜: 2880
-- HP-HP, SA2: 3840
-
 - {C} HK(pc), SA2: 3880
-
-- リンクS-HK, 2LP, 弱スピン: 1870
 
 - 強スピン, SA2
 
-- MP-MP, 中スピン: 1800
+- {立} MP-MP, 中スピン: 1800
 
-- MP-MP, 弱グライド-6P: 2060
+- {立} MP-MP, 弱グライド-6P: 2060
 
 - 2MP, 弱グライド-6P: 1880
-
-- HP(pc)-HP, 強ホーン: 2800
-
-- 2MK(+2), MK-HK, 強昇竜: 2120
-- 2MK(+2), MK-HK, 強ホーン: 2060
-
-- 2MK(+4), MP-MP, 強昇竜: 2200
-
-- MK-HK, 強ホーン
-- MK-HK, 強昇竜
-- MK-HK, ODスピン-リンクMK, 弱ホーン, SA3: 4710 (AC3)
 
 - 2HP, 強スピン
 - 2HP, 強ホーン
@@ -70,7 +170,38 @@ MK始動。
 - リンクS-MK, SA2: 3000
 - リンクS-MK, SA3: 3840
 
+- リンクS-HK, 2LP, 2LP, 弱スピン
+
 MK-HK, ODホーンはすっぽ抜けるので注意。
 
 - 2MK, ODグライド-6P, SA2: 4096 (AC2)
 - 2MK, ODグライド-6P, SA3: 4480
+
+- MK-HK, リンク-LK: 1880
+
+- スピン, SA3
+- ODスピン, SA2
+- ホーン, SA3
+- ODホーン, SA2
+- グライド-6P, SA3
+- ODグライド-6P, SA2
+
+- 2HK, リンク-MK, 強昇竜
+
+- {端} 強ホーン, 中昇竜
+
+- MP(+2), LK, 弱ホーン
+- {端} HP(pc)-HP, DR 2MK-HK, 強ホーン, 弱昇竜
+
+- 2HP, ODリンク-LK, ODホーン
+
+- リンクS-LK, ODホーン
+
+- MK-HK, ODスピン-リンク-LK
+- MK-HK, ODスピン-リンク-MK
+
+- 2LP, CR 2LP, 2HP
+
+- HP(pc)-HP, DR 2MP, ODリンク-MK, 弱ホーン
+
+- SA1, 強昇竜
