--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -8,9 +8,18 @@
 
 ## 2HK(pc): 46
 
+## DR MK(g): 5
+
+めり込むと+5の投げ間合いで後退がシミーになる。
+ただ、ガードは+5から最速で投げると空振りになるので注意。
+
 ## グライド-6P: 39
 
 中央でもわりと近くに落ちる。
+
+## ODグライド-6P: 42
+
+- {端} 詐欺飛び
 
 ## スピン(g)-リンク: -12
 
@@ -21,7 +30,9 @@
 
 ## 中スピン: 42
 
-- J.HK: 詐欺飛び
+端のODグライド-6Pと同じ。
+
+中スピンが直接当たるのは2MK-HKかMP-MPで、いずれも立ち限定なので確認が難しい。
 
 ## 強スピン: 52
 
@@ -35,11 +46,11 @@
 
 ## {端} 強スピン, SA1: 47
 
-## リンク-LK(g): 1
+## リンクS-LK(g): 1
 
 スピンからもリンクに派生できる。
 
-## リンク-HK(g): 3
+## リンクS-HK(g): 3
 
 スピンからもリンクに派生できる。
 
@@ -58,6 +69,15 @@
 ## MK-HK, 中ホーン: 38
 
 ## MK-HK, 強ホーン: 36
+
+## {端} MK-HK, 弱グライド-6P: 42
+
+端のODグライド-6Pと同じ。
+HKから弱グライドの間が4Fしかないし、ガードされても-3なので入れ込んでもいい。
+
+## {端} HP(pc)-HP, 弱グライド-6P: 42
+
+端のODグライド-6Pと同じ。
 
 ## ODホーン: 43
 
