--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -1,4 +1,47 @@
-## ムーングライド
+## MK
 
-ガードされても弱が-3、中/強が-2で確反がない。
+ヒット確認して2LPやLKに繋いだり、MK-HKのTCも何とか間に合う。
+ガードされても+1から2LP, 2LPまで入る。
+
+ヒット時はできればMK-HKが高いけど猶予は少ない。
+2LPやLKの方がヒット確認は簡単。
+
+## {端} MK-HK, 弱グライド
+
+ガードされるとHKと弱グライドの間に4F隙がある。
+ただ、1Fでも遅れると相打ちになって2MPが入る。
+
+## 2MP, 弱グライド
+
+ガードされても無敵技以外で割り込めず、-3なので確反がない。
+
 キャンセルできる技からとりあえず振っておく技。単発確認して派生すると起き攻めできる。
+
+## DR MK: 15-19
+
+ガードさせて+5以上、ヒットで+9以上ある。
+
+DR MK(+3)がヒットするとHP-HPも入る。
+
+## DR 2MK
+
+ガードされても五分で、ヒットすると+8になる。MKか、遠かったらMPか2MPからコンボが入る。
+
+## DR 6MK: 28-32
+
+中段。ガードされても+2
+
+## 6MK(+2): 21
+
+## 詐欺飛び: 42
+
+詐欺飛びを狙える場面が多い。
+
+当てた際の有利フレームはJ.HPが一番長い。あえて少し遅らせて2ヒットで崩すこともできる。
+ただ、しゃがみに当たりにくい。J.HKが無難ではある。
+
+- {端} 中スピン
+- MK-HK, 弱グライド-6P
+- HP(pc)-HP, 弱グライド-6P
+- ODグライド-6P
+- SA1
