--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -1,1 +1,50 @@
-- ステップが遅い（20F）
+## 性能
+
+- ステップが遅い (20F)
+- バクステが長い
+
+## ガードさせて有利になる技
+
+- MK: +1
+- リンクS-LK: +1
+- リンクS-HK: +3
+
+## 密着でガードされると確反がある技
+
+- LK: -4 (キャンセル可)
+- MP-MP: -10、しゃがみガードに当たらない (キャンセル可)
+- HK: -4
+- 2MP: -4 (キャンセル可)
+- 2MK: -4
+- 2MK-HK: -9、しゃがみガードに当たらない (キャンセル可)
+- 2HP: -7
+- 2HK: -11
+- 6HP: -4
+- 6HK: -4
+- 昇竜: -24以上
+- スピン: -10以上、しゃがみガードに当たらない
+- ホーン: -9以上、しゃがみガードに当たらない
+- グライド-6P: -13
+- リンク-LK: -5
+- リンク-MK: -9
+- リンクS-MK: -4
+- SA1/2/3: -47以上
+
+## モダン操作
+
+スライディングやグライドはないが、致命的というほどではない。
+モダンでも全然使える。
+
+なぜかAC3が中ホーンも入るのに弱ホーン。
+中ホーンの方がダメージは高い。まぁ、弱ホーンは状況が良いので良し悪し。
+
+## モダンにない技
+
+- LP
+- HK
+- 3HK
+- 中/強グライド
+
+## その他
+
+シミーがあまり減らない。とはいえノーゲージで2500くらい。
