--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -1,20 +1,5 @@
 # Combos
 
-## 確反
-
-### 6F
-
-MK始動。
-密着ならMK, 2HP, 強スピンルートが高い。なんならMPやHPのルートより高い。
-
-### 8F
-
-MP, MK-HKが火力を出しやすい。シミーとかこっち。
-
-### 12F以上
-
-パニカンとか関係なく単純にHP-HPから。昇竜やSAはこっち。
-
 ## 必殺技キャンセルできる技
 
 - LP
@@ -29,15 +14,47 @@ MP, MK-HKが火力を出しやすい。シミーとかこっち。
 
 ## 2LP
 
-- 2LP, 2LP, 弱スピン: 1170
 - 2LP, 2LP, 強昇竜: 1520
+- 2LP, 2LP, 弱スピン: 1170
+- 2LP, 2LP, 弱スピン-リンク: 960
+- {立} 2LP, 2LP, 弱ホーン: 1310
+
+## 2LP(+4)
+
+- 2LP(+4), 2HP, 強ホーン: 1850
+- 2LP(+4), MK-HK, ODスピン-リンクMK, 中ホーン: 2220
+- 2LP(+4), MK-HK, ODスピン-リンクMK, SA2: 3560
+
+## MP(+4)
+
+- MP(+4), MK-HK, 強ホーン: 2330
+- MP(+4), MK-HK, 強ホーン, SA3: 4330
 
 ## {立} MP-MP
+
+- MP-MP, 中ホーン: 1960
+- MP-MP, 中スピン: 1800
+- MP-MP, 中スピン-リンク: 1480
+- MP-MP, 弱グライド-6P: 2060
+
+## 2MP
+
+- 2MP, CR MK, 2HP, 強スピン, 中ホーン: 2781
+- {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜: 3089
+- 2MP, CR MK, 2HP, 強スピン, SA2: 3453
+- 2MP, CR MK, 2HP, 強ホーン, SA3: 4336
+- {端} 2MP, CR MK, 2HP, 強スピン, 中ホーン, SA3: 4781
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4971
+- 2MP, CR HP, MK-HK, ODスピン-リンク-MK, 中ホーン, SA3: 4904
 
 ## MK
 
 - MK-HK, 強ホーン
 - MK-HK, 強昇竜
+- MK-HK, 弱リンク-LK
+- {端} MK-HK, 弱ホーン, 強昇竜: 2620
+- MK-HK, ODスピン-リンクMK, 中ホーン: 2760
+- MK-HK, ODスピン-リンクMK, SA1, 弱ホーン: 3100
 - MK-HK, ODスピン-リンクMK, 弱ホーン, SA3: 4710 (AC3)
 
 ## MK(+4)
@@ -65,6 +82,7 @@ MP, MK-HKが火力を出しやすい。シミーとかこっち。
 - 2MK-HK, 強昇竜: 1900
 - 2MK-HK, 強ホーン: 1830
 - 2MK-HK, 中スピン: 1620
+- 2MK-HK, 弱リンク-LK: 1480
 - {端} 2MK-HK, ODホーン, 強昇竜: 2460
 - {端} 2MK-HK, ODホーン, OD昇竜: 2560
 - 2MK-HK, SA2: 2880
@@ -83,34 +101,51 @@ MKは近くないと当たらない。
 
 - {立} 2MK(+4), MP-MP, 強昇竜: 2200
 
+## 6MK
+
+- 6MK-MK: 1200
+
 ## 6MK(+4)
 
 - 6MK(+4), MK-HK, 強昇竜: 2400
+- {端} 6MK(+4), MK-HK, 弱ホーン, 強昇竜: 2890
 - 6MK(+4), MK-HK, ODスピン-リンク-MK, 強昇竜: 3050
 - 6MK(+4), MK-HK, ODスピン-リンク-MK, 中ホーン, SA3: 4970
 
 ## HP
 
 - HP-HP, 強昇竜: 2720
+- HP-HP, 2HK: 2320
 - HP-HP, OD昇竜: 2880
+- HP-HP, ODホーン: 2560
+- {端} HP-HP, ODホーン, 強昇竜: 3400
 - HP-HP, SA2: 3840
 - HP-HP, SA2(H): 3160
+
+昇竜は近くないと届かない。
 
 ## HP(pc)
 
 - HP(pc)-HP, 強ホーン: 2800
 - HP(pc)-HP, 強昇竜: 2880
 - HP(pc)-HP, DR 2HP, 強スピン, 強ホーン: 3558
-- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, 強昇竜: 3934
-- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, 強昇竜: 3996
-- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, OD昇竜: 4028
-- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, SA1, 強昇竜: 4348
+- HP(pc)-HP, ODスピン-リンク-MK, 中ホーン: 3620
+- {端} HP(pc)-HP, 弱ホーン, 強昇竜: 3480
+- {端} HP(pc)-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 4133
+- HP(pc)-HP, ODスピン-リンク-MK, SA1, 弱ホーン: 3960
+- {端} HP(pc)-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, SA1, 強昇竜: 4435
 - HP(pc)-HP, DR 2HP, 強スピン, SA2: 4188
 - HP(pc)-HP, ODスピン, SA2: 4240
 - {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, SA2: 5020
 - HP(pc)-HP, 強ホーン, SA3: 4800
 - {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, SA3: 5558
-- {端} HP(pc)-HP, ODスピン, 弱ホーン, SA3: 5220
+
+遠いとDR 2HPが当たりにくいので、2MPで妥協してもいい。
+
+## {空} J.MP-MP
+
+- {空} J.MP-MP, 強昇竜: 2660
+- {空} J.MP-MP, SA1, 強昇竜: 3500
 
 ## 強スピン(pc)
 
@@ -121,18 +156,29 @@ MKは近くないと当たらない。
 - 強スピン(pc)-リンク-MK, 中ホーン, SA3: 5220
 - {端} 強スピン(pc)-リンク-LK, DR 2LP, 中スピン-リンク-MK, 弱ホーン, 弱昇竜: 4093
 - {端} 強スピン(pc)-リンク-LK, DR 2LP, 中スピン-リンク-MK, 弱ホーン, SA3: 5843
+- {端} 強スピン(pc)-リンク-LK, DR 2LP, CR HP-HP, DR 2HP, 中スピン-リンク-MK, 中ホーン, SA3: 6313
+
+## リンクS-LK
+
+- リンクS-LK, ODホーン: 2160
+- {端} リンクS-LK, 中昇竜: 3000
+- {端} リンクS-LK, SA1, 強昇竜: 3800
+- リンクS-LK, SA2: 3760
+- リンクS-LK, ODホーン, SA2: 4120
 
 ## リンクS-HK
 
 弾抜けなどから狙う。
 
-- リンクS-HK, 2LP, 弱スピン: 1870
+- リンクS-HK, 2LP, 弱スピン: 1670
+- {立} リンクS-HK, 2LP, 2LP, 弱ホーン: 1910
 
 ## DI(pc)
 
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK; 強昇竜: 3340 (最速だと3090)
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン: 3240
 - {端} DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3550
+- {端} DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-リンクMK, 弱ホーン, 強昇竜: 3649
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3640
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン, SA3: 5240
 
@@ -144,18 +190,12 @@ MKは近くないと当たらない。
 
 ## その他
 
-- 2LP(+4), 2HP, 強ホーン: 1850
-
 - 2LK, 2LP, 弱スピン: 1070
 - 2LK, 2LP, 強昇竜: 1420 (AC1)
 
 - {C} HK(pc), SA2: 3880
 
 - 強スピン, SA2
-
-- {立} MP-MP, 中スピン: 1800
-
-- {立} MP-MP, 弱グライド-6P: 2060
 
 - 2MP, 弱グライド-6P: 1880
 
@@ -177,8 +217,6 @@ MK-HK, ODホーンはすっぽ抜けるので注意。
 - 2MK, ODグライド-6P, SA2: 4096 (AC2)
 - 2MK, ODグライド-6P, SA3: 4480
 
-- MK-HK, リンク-LK: 1880
-
 - スピン, SA3
 - ODスピン, SA2
 - ホーン, SA3
@@ -193,15 +231,10 @@ MK-HK, ODホーンはすっぽ抜けるので注意。
 - MP(+2), LK, 弱ホーン
 - {端} HP(pc)-HP, DR 2MK-HK, 強ホーン, 弱昇竜
 
-- 2HP, ODリンク-LK, ODホーン
-
-- リンクS-LK, ODホーン
-
-- MK-HK, ODスピン-リンク-LK
-- MK-HK, ODスピン-リンク-MK
-
 - 2LP, CR 2LP, 2HP
 
 - HP(pc)-HP, DR 2MP, ODリンク-MK, 弱ホーン
 
 - SA1, 強昇竜
+
+- 強スピン, DR 2MP, 2HP
