--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -1,4 +1,13 @@
-## MK
+## 2LK, 2LP: 2
+
+下段始動。
+
+## 2LP, 2LK, 2LP: 1
+
+ジャストパリィの仕様変更に合わせて、上段から入って下段で崩すコンボ。
+ガードでも無敵技以外で割り込めないし、ヒットしたらちゃんとつながる。
+
+## MK: 2-8
 
 ヒット確認して2LPやLKに繋いだり、MK-HKのTCも何とか間に合う。
 ガードされても+1から2LP, 2LPまで入る。
@@ -32,6 +41,15 @@ DR MK(+3)がヒットするとHP-HPも入る。
 中段。ガードされても+2
 
 ## 6MK(+2): 21
+
+## リンクS-LK: 38-47
+
+44Fまでは弱、それ以上は強でいい。
+
+## リンク-HK(+2): 39, 41, 42
+
+強弱でタイミングを変えて持続当てできる。
+ただ、ヒットストップが短くてヒット確認するのが難しい。
 
 ## 詐欺飛び: 42
 
