--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -1,25 +1,66 @@
 ## 差し合い
 
-リンクが弾抜けに使える。
-基本的に当たるならMK派生。ガードされそうならHKで中段。
+長くてTCで2000減る6HPが主力。ただ、発生前は結構判定が前に出るので注意。
+基本的には下がりながら、前に出てくる相手に6HPや2MPラッシュを狙う。
 
-## 当て技
+相手の中足の外から2MKや6MKで中下段を狙うのも強い。
+ただ、2MKは立ちヒット確認が必要。
 
-- 6MP: 当て、単発ヒット確認してTC
-- 2MK: 単発ヒット確認してTC
-- 6HP: 単発ヒット確認してTC
+リンクシンクが弾抜けに使えるけど、見てからというよりはとりあえず転がっておく。
+たまにLKや強化HKで触るのもいい。
 
-## 置き技
+## 差し合いの距離
 
-- LK: 弱ホーンを仕込んで置く
-- 2MP: 弱グライドを仕込んで置く
+長い技の発生が遅いので、相手の中足の距離では不利。
+2LPや2LKで暴れたり、4HKで下段を避けたりして離れるといい。
 
-## 差し返し技
+## 離れたいとき
+
+とりあえず2LPや2LKで暴れるか、MKを置いてコンボ。
+
+相手が中足を狙ってくるなら4HKも下段無敵で強い。
+
+## 差し込み
+
+基本的に6HPを遠めから当てて単発ヒット確認したい。
+
+相手の中足の外から2MKと6MKの中下段で崩すのも強い。
+
+近い時は2LPやMKでとりあえず離すのがいい。
+
+- {立} MP: ヒット確認してMP-MP
+- {立} 2MK: 単発立ちヒット確認してTC
+- 6MK: 単発ヒット確認してTC
+- {立} HP: 単発ヒット確認してTC、火力が出る
+- 6HP: 単発ヒット確認してTC、とにかく長い
+- {C} HK: とにかく長い、パニカンで2HKが入る
+- J.MK: めくりも狙える
+- J.HK
+
+## 差し返し
 
 - MP-MP: 発生8F、2MPより長い
+- 2MP: 発生8F
 - 2HK: 発生11F
+
+## 牽制
+
+- MP: MP-MPを仕込んで置く
+- MK: MK-HKやラッシュを仕込んで置く
+- 2MP: 弱グライドやラッシュを仕込んで置く
+- 4HK: 下段に強い
 
 ## 対空
 
 対空は基本的に弱/中昇竜。
 弱はダメージが低いけど、ダウンが長くて起き攻めしやすい。
+
+2HPもわりと落ちる。ダメージは低い。
+
+J.MP-MPの空対空から昇竜やSA1、ODホーンで拾えてわりと火力が出る。
+
+## 攻め
+
+中央の投げが弱いので、できるだけ中下段やシミーの打撃で崩したい。
+
+差し合いが強いので無理に攻めないで差し合いに戻ってもいい。
