--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -10,6 +10,12 @@
 
 - HP(pc)-HP, 強ホーン, SA3
 
+## インパクト返し
+
+- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱スピンS-LK
+
+## 弱攻撃からの攻め
+
 ## 中段からの崩し
 
 - 6MK-MK
