--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -57,6 +57,12 @@
 - MK-HK, ODスピン-リンクMK, SA1, 弱ホーン: 3100
 - MK-HK, ODスピン-リンクMK, 弱ホーン, SA3: 4710 (AC3)
 
+## MK(+1)
+
+持続当てからのコンボ。
+
+- {端} MK(+1), MK-HK, 弱ホーン, 強昇竜: 2790
+
 ## MK(+4)
 
 - MK(+4), 2HP, 強スピン, 中ホーン: 2980
