--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -94,11 +94,22 @@
 
 ## 弱昇竜: 36
 
+- {端} 弱リンク, MK(+2), MK: 持続当て
+
 ## 中昇竜: 26
+
+## {端} 通常ホーン, 中昇竜: 25
+
+- {端} LK, MK(+1): 持続当てからMKが繋がる
 
 ## 強昇竜: 23
 
 - {端} LK: +5
+- {端} LK, 後退: シミー
+
+## {空} 弱ホーン, 強昇竜: 22
+
++5の攻めが+4になるだけで、地上ヒットと共通でいい。
 
 ## OD昇竜: 25
 
