--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -3,12 +3,19 @@
 （ダミー設定 > ガード: ランダム）
 （反撃設定 > ガードリバーサル: OD昇竜）
 
-- {端} J.HP, MK-HK, 弱グライド-6P, J.HP, ...
-- {端} J.HP(g), ガード
+- {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
+- {端} J.HK(g), ガード
 
 ## 確反
 
-- HP(pc)-HP, 強ホーン, SA3
+（確定反撃の練習）
+
+- HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 弱リンク, 後退
+
+端は追撃して伸ばす。
+
+- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 中昇竜, LK, 後退
+- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 中昇竜, LK, MK(+1), MK-HK, 弱グライド-6P, J.HK, ...
 
 ## インパクト返し
 
@@ -16,12 +23,42 @@
 
 ## 弱攻撃からの攻め
 
+- 2LK, 2LP, 弱スピン-リンクLK, ...
+- 2LK, 2LP, 弱スピン-リンクHK, ...
+- 2LK, 2LP, 弱スピン-リンク, 2LK, 2LP, ...
+- 2LK(g), 2LP, ガード
+
+## Sレオパードスナップからの攻め
+
+- リンクS-LK, ODホーン, リンクS-LK, ...
+- リンクS-LK(g), 2LK, 2LP, ...
+- リンクS-LK(g), 2LP(c), MK-HK, ...
+
+## Sマレットスマッシュからの攻め
+
+- リンクS-HK, 2LP, 2LP, 弱スピン-リンク, ...
+- リンクS-HK(g), 2LK, 2LP, ...
+
+## リンクシンクを使った攻め
+
+（ガード: ランダム）
+
+- リンクS-LK(g), 2LK, 2LP
+- 2LK, 2LP, 弱スピン-リンク
+  - リンクS-LK(g), 2LK, 2LP, ...
+- 2LK(g), 2LP, ガード
+
+## 6HPのヒット確認
+
+- 6HP-HP-HP, リンクS-LK, ...
+- 6HP(g), ガード
+
 ## 中段からの崩し
 
 - 6MK-MK
-  - DR 6MK, MK-HK,
-  - DR 6MK(g)
-- 6MK-MK, DR 6MK,
+  - DR 6MK, MK-HK, 中ホーン
+  - {端} DR 6MK, MK-HK, 弱グライド-6P, J.HK, ...
+  - DR 6MK(g), MK
 - 6MK(g), ガード
 
 ## 下段からの崩し
